# fmu-forge

./: CMakeLists.txt  FmuToolsImportCommon.h  FmuToolsModelDescription.cpp  FmuToolsRuntimeLinking.h  FmuToolsUnitDefinitions.h  README.md
demos/: fmi2  fmi2.lnk  fmi3  fmi3.lnk
examples/: README.md
examples/fmi2/cosimulation/: CMakeLists.txt  demo_Cosimulation_fmi2.cpp  myFmuCosimulation_fmi2.cpp
examples/fmi2/model_exchange/: CMakeLists.txt  myFmuModelExchange_fmi2.cpp  myFmuModelExchange_fmi2.h
examples/fmi3/cosimulation/: myFmuCosimulation_fmi3.cpp  myFmuCosimulation_fmi3.h
examples/fmi3/model_exchange/: CMakeLists.txt
fmi2/: CMakeLists.txt  FmuToolsExport.cpp  FmuToolsExport.h  FmuToolsImport.h  FmuToolsVariable.h  ModelicaFmuToolsImport.h  TypesVariantsDefault.h  TypesVariantsTemplate.h
fmi2/demos/cosimulation/: CMakeLists.txt  myFmuCosimulation_fmi2.h
fmi2/demos/model_exchange/: CMakeLists.txt  demo_ModelExchange_fmi2.cpp
fmi3/: CMakeLists.txt  FmuToolsExport.cpp  FmuToolsExport.h  FmuToolsImport.h  FmuToolsVariable.h  TypesVariantsDefault.h
fmi3/demos/cosimulation/: CMakeLists.txt  demo_Cosimulation_fmi3.cpp
fmi3/demos/model_exchange/: CMakeLists.txt  demo_ModelExchange_fmi3.cpp  myFmuModelExchange_fmi3.cpp  myFmuModelExchange_fmi3.h
